# raytracer

./: .gitignore  CMakeLists.txt  camera.cpp  camera.h  colordbl.h  direction.h  main.cpp  pixel.h  ray.h  scene.cpp  scene.h  triangle.h  vertex.h
src/: area_light.h  brdf.h  bsdf.h  camera.cpp  camera.h  colordbl.h  common.h  direction.h  intersectioninfo.h  light.h  material.h  object.h  options.h  pixel.h  point_light.h  ray.h  rng.h  scene.cpp  scene.h  scenebuilder.cpp  scenebuilder.h  sceneobject.cpp  sceneobject.h  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  trianglemesh.cpp  trianglemesh.h  vector.h  vertex.h
